blue-app-http-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-http-gateway
  namespace: blue
  annotations:
    k8s.f5.com/irule-refs: "my-irule" # this is only used in v2.0.0 EHF-1
spec:
  addresses:
  - type: "IPAddress"
    value: 172.16.202.100
  gatewayClassName: f5-gateway-class
  listeners:
  - name: http-listener
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: "All"
      kinds:
      - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: l7-http-app
  namespace: blue
spec:
  parentRefs:
  - name: my-http-gateway
    sectionName: http-listener
  rules:
  - matches:
    - headers:
      - name: "Host"
        value: "blue.demo.net"
    backendRefs:
    - name: nginx-app-svc
      namespace: blue
      port: 80
  - matches:
    - headers:
      - name: "Host"
        value: "blue2.demo.net"
    backendRefs:
    - name: nginx2-app-svc
      namespace: blue
      port: 80
